--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@types/node": "^16.7.8",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "axios": "^0.21.1",
+    "axios": "^1.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
@@ -46,6 +46,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^6.3.0"
   }
 }
